# XPLPro

./: .gitignore  PROTOCOL.md  README.md
XPLPro_Arduino/XPLPro/: API.md
XPLPro_Plugin/: CMakeLists.txt  Config.cpp  Config.h  DataTransfer.cpp  DataTransfer.h  SerialClass.cpp  StatusWindow.cpp  StatusWindow.h  XPLDevice.cpp  XPLDevice.h  XPLProCommon.h  XPLProPlugin.cpp  XPLProPlugin.h  abbreviations.cpp  abbreviations.h  monitorwindow.h  serialclass.h
XPLPro_Plugin/SDK/CHeaders/Widgets/: XPStandardWidgets.h  XPUIGraphics.h  XPWidgetDefs.h  XPWidgetUtils.h  XPWidgets.h
XPLPro_Plugin/SDK/Delphi/Widgets/: XPStandardWidgets.pas  XPUIGraphics.pas  XPWidgetDefs.pas  XPWidgetUtils.pas  XPWidgets.pas
XPLPro_Plugin/SDK/Delphi/XPLM/: XPLMCamera.pas  XPLMDataAccess.pas  XPLMDefs.pas  XPLMDisplay.pas  XPLMGraphics.pas  XPLMInstance.pas  XPLMMap.pas  XPLMMenus.pas  XPLMNavigation.pas  XPLMPlanes.pas  XPLMPlugin.pas  XPLMProcessing.pas  XPLMScenery.pas  XPLMSound.pas  XPLMUtilities.pas  XPLMWeather.pas
XPLPro_Plugin/SDK/Libraries/Mac/XPWidgets.framework/Versions/C/: XPWidgets
XPLPro_Plugin_Source/: StatusWindow.cpp  XPLDevice.cpp  XPLProCommon.h
